# epub-to-xtc-converter

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: deploy.yml  test.yml
cli/: encoder.js
src/: config.py  converter.py  epub_parser.py  epub_utils.py  optimizer.py  pagination.py  text_renderer.py  xtc_format.py
web/: app.js  index.html  style.css
